[gd_scene load_steps=5 format=3 uid="uid://vmqqds3bloep"]

[ext_resource type="Script" path="res://scenes/questions/category_question.gd" id="1_bmjts"]
[ext_resource type="PackedScene" uid="uid://cvv6iv6ohm2qk" path="res://scenes/questions/header_container.tscn" id="2_gxanm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r22po"]
bg_color = Color(0, 1, 0, 0.12549)
border_width_left = 20
border_width_top = 10
border_width_right = 20
border_width_bottom = 10
border_color = Color(0, 1, 0, 0.501961)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vap1k"]
bg_color = Color(1, 0, 1, 0.12549)
border_width_left = 20
border_width_top = 10
border_width_right = 20
border_width_bottom = 10
border_color = Color(1, 0, 1, 0.501961)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CategoryQuestion" type="CanvasLayer"]
script = ExtResource("1_bmjts")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.309804, 0.309804, 0.309804, 1)

[node name="HeaderContainer" parent="." instance=ExtResource("2_gxanm")]
unique_name_in_owner = true
offset_left = -53.0
offset_right = 53.0

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 45.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Question"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LeftCategory" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_r22po")
text = "Left"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="RightCategory" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vap1k")
text = "Right"
horizontal_alignment = 2
